--- a/index.html
+++ b/index.html
@@ -10,25 +10,15 @@
   </style>
 </head>
 <body class="font-sans text-white bg-black">
-  <!-- Navigation -->
+  <!-- Navigation -->  
   <header class="fixed inset-x-0 top-0 z-50 flex items-center justify-between px-6 py-4 bg-black/80 backdrop-blur-lg">
     <a href="#" class="flex items-center gap-2 group" aria-label="Homepage">
-      <!-- Icon‑only logo (transparent background) -->
-      <svg width="40" height="40" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false">
-        <!-- C outline -->
-        <path d="M90 50a40 40 0 1 1-16-32" fill="none" stroke="#ffffff" stroke-width="8" stroke-linecap="round" />
-        <!-- Aperture blades -->
-        <g fill="var(--burgundy)">
-          <path d="M50 12 L63 39 L50 50 Z" />
-          <path d="M63 39 L88 50 L50 50 Z" />
-          <path d="M50 88 L63 62 L50 50 Z" />
-          <path d="M37 62 L50 88 L50 50 Z" />
-          <path d="M12 50 L37 39 L50 50 Z" />
-        </g>
-      </svg>
+      <!-- USE YOUR OWN LOGO FILE HERE -->
+      <!-- Place your logo (SVG/PNG) in the same folder and update the filename below -->
+      <img src="logo.svg" alt="CrimsonLens logo" class="w-10 h-10 select-none" />
       <span class="text-xl font-semibold tracking-wide transition-colors group-hover:text-[var(--burgundy)]">CrimsonLens</span>
     </a>
-
+    
     <nav class="hidden gap-6 text-sm md:flex">
       <a href="#services" class="transition-colors hover:text-[var(--burgundy)]">Services</a>
       <a href="#testimonials" class="transition-colors hover:text-[var(--burgundy)]">Testimonials</a>
