--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <a href="#" class="flex items-center gap-2 group" aria-label="Homepage">
       <!-- USE YOUR OWN LOGO FILE HERE -->
       <!-- Place your logo (SVG/PNG) in the same folder and update the filename below -->
-      <img src="logo.svg" alt="CrimsonLens logo" class="w-10 h-10 select-none" />
+      <img src="logo.webp" alt="CrimsonLens logo" class="w-10 h-10 select-none" />
       <span class="text-xl font-semibold tracking-wide transition-colors group-hover:text-[var(--burgundy)]">CrimsonLens</span>
     </a>
     
