--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
       <!-- USE YOUR OWN LOGO FILE HERE -->
       <!-- Place your logo (SVG/PNG) in the same folder and update the filename below -->
       <img src="logo.webp" alt="CrimsonLens logo" class="w-10 h-10 select-none" />
-      <span class="text-xl font-semibold tracking-wide transition-colors group-hover:text-[var(--burgundy)]">CrimsonLens</span>
+      <span class="text-xl font-semibold tracking-wide select-none">
+        <span class="text-white">Crimson</span><span class="text-[var(--burgundy)]">Lens</span>
+      </span>
     </a>
     
     <nav class="hidden gap-6 text-sm md:flex">
