--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </header>
 
   <!-- Hero -->
-  <section class="relative flex items-center justify-center min-h-screen pt-24 text-center bg-center bg-cover" style="background-image:url('YOUR-HERO-IMAGE');">
+  <section class="relative flex items-center justify-center min-h-screen pt-24 text-center bg-center bg-cover" style="background-image:url('hero_background.webp');">
     <div class="absolute inset-0 bg-black/70" aria-hidden="true"></div>
     <div class="relative z-10 max-w-3xl px-6">
       <h1 class="mb-3 text-4xl font-bold leading-tight md:text-6xl">Visual Storytelling Meets<br><span class="text-[var(--burgundy)]">AI‑Powered Marketing</span></h1>
