--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 
   <!-- Contact CTA -->
   <section id="contact" class="py-24 text-center bg-cover bg-center" style="background-image:url('contact_background.webp');">
+    <div class="absolute inset-0 bg-black opacity-20"></div> <!-- Black overlay -->
     <h2 class="mb-6 text-3xl font-semibold md:text-4xl">Ready to Elevate Your Brand?</h2>
     <p class="max-w-2xl mx-auto mb-10 text-gray-300">Let’s craft visual stories and data‑powered campaigns that move your audience—and your bottom line.</p>
     <a href="mailto:hello@crimsonlens.ai" class="px-8 py-4 transition rounded-full shadow-lg bg-[var(--burgundy)] hover:bg-white hover:text-black">Book&nbsp;a&nbsp;Call</a>
@@ -108,6 +109,7 @@
 
   <footer class="py-6 text-sm text-center bg-neutral-900 text-gray-500">© 2025 CrimsonLens. All rights reserved.</footer>
 
+ 
   <!-- Carousel logic -->
   <script>
     document.addEventListener('DOMContentLoaded', () => {
