--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <nav class="hidden gap-6 text-sm md:flex">
       <a href="#services" class="transition-colors hover:text-[var(--burgundy)]">Services</a>
       <a href="#testimonials" class="transition-colors hover:text-[var(--burgundy)]">Testimonials</a>
-      <a href="#contact" class="transition-colors hover:text-[var(--burgundy)]">Book&nbsp;a&nbsp;Call</a>
+      <a id="book-call-btn" href="#" class="px-6 py-3 transition rounded-full bg-[var(--burgundy)] hover:bg-white hover:text-black">Book&nbsp;a&nbsp;Call</a>
     </nav>
   </header>
 
@@ -36,7 +36,7 @@
       <h2 class="mb-8 text-xl font-medium text-gray-200 md:text-2xl">Ignite emotion. Inspire action. Accelerate growth.</h2>
       <div class="flex flex-wrap justify-center gap-4">
         <a href="#" class="px-6 py-3 border border-white rounded-full transition hover:bg-white hover:text-black">View&nbsp;Portfolio</a>
-        <a href="#contact" class="px-6 py-3 transition rounded-full bg-[var(--burgundy)] hover:bg-white hover:text-black">Book&nbsp;a&nbsp;Call</a>
+        <a id="book-call-btn" href="#" class="px-6 py-3 transition rounded-full bg-[var(--burgundy)] hover:bg-white hover:text-black">Book&nbsp;a&nbsp;Call</a>
       </div>
     </div>
   </section>
@@ -101,11 +101,12 @@
 
   <!-- Contact CTA -->
   <section id="contact" class="py-24 text-center bg-cover bg-center" style="background-image:url('contact_background.webp');">
-    <div class="absolute inset-0 bg-black opacity-20"></div> <!-- Black overlay -->
+    <div class="absolute inset-0 bg-black opacity-40"></div> <!-- Black overlay -->
     <h2 class="mb-6 text-3xl font-semibold md:text-4xl">Ready to Elevate Your Brand?</h2>
     <p class="max-w-2xl mx-auto mb-10 text-gray-300">Let’s craft visual stories and data‑powered campaigns that move your audience—and your bottom line.</p>
-    <a href="mailto:hello@crimsonlens.ai" class="px-8 py-4 transition rounded-full shadow-lg bg-[var(--burgundy)] hover:bg-white hover:text-black">Book&nbsp;a&nbsp;Call</a>
+    <a href="#" class="px-8 py-4 transition rounded-full shadow-lg bg-[var(--burgundy)] hover:bg-white hover:text-black">Book&nbsp;a&nbsp;Call</a>
   </section>
+
 
   <footer class="py-6 text-sm text-center bg-neutral-900 text-gray-500">© 2025 CrimsonLens. All rights reserved.</footer>
 
