--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
       <!-- slider viewport -->
       <div class="relative overflow-hidden">
         <div id="carousel" class="flex transition-transform duration-700" style="will-change: transform;">
+          
           <!-- Slide 1 -->
           <div class="flex-shrink-0 w-full px-8">
             <blockquote class="text-center">
@@ -129,15 +130,37 @@
               <footer class="mt-4 text-gray-400">— Nora V., Marketing Lead, Sziget Festival</footer>
             </blockquote>
           </div>
+
+            <!-- NEW Slide 4 (placeholder) -->
+          <div class="flex-shrink-0 w-full px-8">
+            <blockquote class="text-center">
+              <p class="text-xl italic leading-relaxed md:text-2xl">
+                “Their motion graphics took our product launch from ordinary to unforgettable.”
+              </p>
+              <footer class="mt-4 text-gray-400">— Luca R., Product Manager, TechNova</footer>
+            </blockquote>
+          </div>
+
+          <!-- NEW Slide 5 (placeholder) -->
+          <div class="flex-shrink-0 w-full px-8">
+            <blockquote class="text-center">
+              <p class="text-xl italic leading-relaxed md:text-2xl">
+                “Professional, creative, and lightning‑fast — the ideal content partner.”
+              </p>
+              <footer class="mt-4 text-gray-400">— Marianna S., CMO, VentureWorks</footer>
+            </blockquote>
+          </div>
+          </div>
         </div>
-      </div>
 
       <!-- dots -->
       <div class="flex justify-center gap-2 mt-8">
-        <button data-slide="0" class="dot w-3 h-3 rounded-full bg-[var(--burgundy)]" aria-label="Slide 1"></button>
-        <button data-slide="1" class="dot w-3 h-3 rounded-full bg-gray-500"         aria-label="Slide 2"></button>
-        <button data-slide="2" class="dot w-3 h-3 rounded-full bg-gray-500"         aria-label="Slide 3"></button>
-      </div>
+      <button data-slide="0" class="dot w-3 h-3 rounded-full bg-[var(--burgundy)]" aria-label="Slide 1"></button>
+      <button data-slide="1" class="dot w-3 h-3 rounded-full bg-gray-500"         aria-label="Slide 2"></button>
+      <button data-slide="2" class="dot w-3 h-3 rounded-full bg-gray-500"         aria-label="Slide 3"></button>
+      <button data-slide="3" class="dot w-3 h-3 rounded-full bg-gray-500"         aria-label="Slide 4"></button>
+      <button data-slide="4" class="dot w-3 h-3 rounded-full bg-gray-500"         aria-label="Slide 5"></button>
+    </div>
     </div>
   </section>
 
@@ -190,16 +213,15 @@
     });
   </script>
 
-  <!-- ▸ CALENDLY POPUP SCRIPT --------------------------------------------------------- -->
-  <script src="https://assets.calendly.com/assets/external/widget.js" async></script>
+ <!-- ▸ CALENDLY POPUP (now loads synchronously) --------------------------- -->
+  <script src="https://assets.calendly.com/assets/external/widget.js"></script>
   <script>
-    window.addEventListener('DOMContentLoaded', () => {
-      document.querySelectorAll('.book-call').forEach(btn => {
-        btn.addEventListener('click', e => {
-          e.preventDefault();
-          Calendly.initPopupWidget({
-            url: 'https://calendly.com/jakabbenedek2002/discovery-call'
-          });
+    // attach popup to every .book-call link
+    document.querySelectorAll('.book-call').forEach(btn => {
+      btn.addEventListener('click', e => {
+        e.preventDefault();
+        Calendly.initPopupWidget({
+          url: 'https://calendly.com/jakabbenedek2002/discovery-call'
         });
       });
     });
