Add portfolioUpdate index.html

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </h2>
 
       <div class="flex flex-wrap justify-center gap-4">
-        <a href="#" class="px-6 py-3 border border-white rounded-full transition hover:bg-white hover:text-black">
+        <a href="portfolio.html" class="px-6 py-3 border border-white rounded-full transition hover:bg-white hover:text-black">
           View&nbsp;Portfolio
         </a>
 
