--- a/portfolio.html
+++ b/portfolio.html
@@ -4,17 +4,35 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Portfolio | CrimsonLens</title>
+
+  <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
+
   <style>
     :root { --burgundy: #e0003c; }
+
+    /* Portrait‑oriented responsive background */
+    #portfolio-bg {
+      background-image: url('portfolio_background.webp');
+      background-size: cover;
+      background-position: center;
+    }
+    @media (min-width: 640px) {
+      #portfolio-bg {
+        background-image: url('portfolio_background_1080x1920.webp');
+      }
+    }
+    @media (min-width: 1024px) {
+      #portfolio-bg {
+        background-image: url('portfolio_background_1440x2560.webp');
+      }
+    }
   </style>
 </head>
-<body
-  class="font-sans text-white"
-  style="background-image:url('portfolio_background.webp'); background-size:cover; background-position:center;"
->
 
-  <!-- NAVIGATION (same as home) -->
+<body class="font-sans text-white">
+
+  <!-- NAVIGATION -->
   <header class="fixed inset-x-0 top-0 z-50 flex items-center justify-between px-6 py-4 bg-black/80 backdrop-blur-lg">
     <a href="index.html" class="flex items-center gap-2 group" aria-label="Homepage">
       <img src="logo.webp" alt="CrimsonLens logo" class="w-10 h-10 select-none" />
@@ -31,125 +49,112 @@
     </nav>
   </header>
 
-  <!-- PAGE TITLE -->
-  <div class="pt-32 text-center">
-    <h1 class="text-4xl font-bold mb-4">Selected Works</h1>
-    <p class="text-gray-300 mb-12 px-6 max-w-2xl mx-auto">
-      A curated collection to spark ideas—click any project to see it in motion.
-    </p>
-  </div>
+  <!-- PORTFOLIO CONTENT WITH PORTRAIT BACKGROUND -->
+  <div id="portfolio-bg" class="min-h-screen pt-32 pb-16">
 
-  <!-- GRID GALLERY -->
-  <section class="max-w-7xl mx-auto px-6 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-8 pb-16">
-    <!-- repeat for x = 1..7 -->
-    <!-- PROJECT 1 -->
-    <a href="#"
-       class="project-item relative group overflow-hidden rounded-2xl bg-neutral-800 hover:scale-105 transition-transform"
-       data-video="project_video_1.webm"
-    >
-      <img src="project1.webp"
-           alt="Project 1 thumbnail"
-           class="object-cover w-full h-64 opacity-90 group-hover:opacity-100 transition-opacity"
-      />
-      <div class="absolute bottom-0 left-0 right-0 p-4 bg-black/50">
-        <h3 class="text-lg font-semibold">Brand Film – NovaTech</h3>
-      </div>
-    </a>
+    <!-- Page Title & Intro -->
+    <div class="text-center px-6">
+      <h1 class="text-4xl font-bold mb-4">Selected Works</h1>
+      <p class="text-gray-300 mb-12 max-w-2xl mx-auto">
+        A curated collection to spark ideas—click any project to see it in motion.
+      </p>
+    </div>
 
-    <!-- PROJECT 2 -->
-    <a href="#" class="project-item relative group overflow-hidden rounded-2xl bg-neutral-800 hover:scale-105 transition-transform"
-       data-video="project_video_2.webm"
-    >
-      <img src="project2.webp" alt="Project 2 thumbnail"
-           class="object-cover w-full h-64 opacity-90 group-hover:opacity-100 transition-opacity" />
-      <div class="absolute bottom-0 left-0 right-0 p-4 bg-black/50">
-        <h3 class="text-lg font-semibold">Event Aftermovie – Sziget Festival</h3>
-      </div>
-    </a>
+    <!-- Grid Gallery -->
+    <section class="max-w-7xl mx-auto px-6 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-8">
 
-    <!-- PROJECT 3 -->
-    <a href="#" class="project-item relative group overflow-hidden rounded-2xl bg-neutral-800 hover:scale-105 transition-transform"
-       data-video="project_video_3.webm"
-    >
-      <img src="project3.webp" alt="Project 3 thumbnail"
-           class="object-cover w-full h-64 opacity-90 group-hover:opacity-100 transition-opacity" />
-      <div class="absolute bottom-0 left-0 right-0 p-4 bg-black/50">
-        <h3 class="text-lg font-semibold">Photography Series – Budapest Streets</h3>
-      </div>
-    </a>
+      <!-- Project 1 -->
+      <a href="#" class="project-item relative group overflow-hidden rounded-2xl bg-neutral-800 hover:scale-105 transition-transform"
+         data-video="project_video_1.webm">
+        <img src="project1.webp" alt="Project 1" class="object-cover w-full h-64 opacity-90 group-hover:opacity-100 transition-opacity" />
+        <div class="absolute bottom-0 left-0 right-0 p-4 bg-black/50">
+          <h3 class="text-lg font-semibold">Brand Film – NovaTech</h3>
+        </div>
+      </a>
 
-    <!-- PROJECT 4 -->
-    <a href="#" class="project-item relative group overflow-hidden rounded-2xl bg-neutral-800 hover:scale-105 transition-transform"
-       data-video="project_video_4.webm"
-    >
-      <img src="project4.webp" alt="Project 4 thumbnail"
-           class="object-cover w-full h-64 opacity-90 group-hover:opacity-100 transition-opacity" />
-      <div class="absolute bottom-0 left-0 right-0 p-4 bg-black/50">
-        <h3 class="text-lg font-semibold">Drone Footage – Aeropark Campaign</h3>
-      </div>
-    </a>
+      <!-- Project 2 -->
+      <a href="#" class="project-item relative group overflow-hidden rounded-2xl bg-neutral-800 hover:scale-105 transition-transform"
+         data-video="project_video_2.webm">
+        <img src="project2.webp" alt="Project 2" class="object-cover w-full h-64 opacity-90 group-hover:opacity-100 transition-opacity" />
+        <div class="absolute bottom-0 left-0 right-0 p-4 bg-black/50">
+          <h3 class="text-lg font-semibold">Event Aftermovie – Sziget Festival</h3>
+        </div>
+      </a>
 
-    <!-- PROJECT 5 -->
-    <a href="#" class="project-item relative group overflow-hidden rounded-2xl bg-neutral-800 hover:scale-105 transition-transform"
-       data-video="project_video_5.webm"
-    >
-      <img src="project5.webp" alt="Project 5 thumbnail"
-           class="object-cover w-full h-64 opacity-90 group-hover:opacity-100 transition-opacity" />
-      <div class="absolute bottom-0 left-0 right-0 p-4 bg-black/50">
-        <h3 class="text-lg font-semibold">Product Promo – VeloSmart</h3>
-      </div>
-    </a>
+      <!-- Project 3 -->
+      <a href="#" class="project-item relative group overflow-hidden rounded-2xl bg-neutral-800 hover:scale-105 transition-transform"
+         data-video="project_video_3.webm">
+        <img src="project3.webp" alt="Project 3" class="object-cover w-full h-64 opacity-90 group-hover:opacity-100 transition-opacity" />
+        <div class="absolute bottom-0 left-0 right-0 p-4 bg-black/50">
+          <h3 class="text-lg font-semibold">Photography Series – Budapest Streets</h3>
+        </div>
+      </a>
 
-    <!-- PROJECT 6 -->
-    <a href="#" class="project-item relative group overflow-hidden rounded-2xl bg-neutral-800 hover:scale-105 transition-transform"
-       data-video="project_video_6.webm"
-    >
-      <img src="project6.webp" alt="Project 6 thumbnail"
-           class="object-cover w-full h-64 opacity-90 group-hover:opacity-100 transition-opacity" />
-      <div class="absolute bottom-0 left-0 right-0 p-4 bg-black/50">
-        <h3 class="text-lg font-semibold">Content Campaign – Green Future</h3>
-      </div>
-    </a>
+      <!-- Project 4 -->
+      <a href="#" class="project-item relative group overflow-hidden rounded-2xl bg-neutral-800 hover:scale-105 transition-transform"
+         data-video="project_video_4.webm">
+        <img src="project4.webp" alt="Project 4" class="object-cover w-full h-64 opacity-90 group-hover:opacity-100 transition-opacity" />
+        <div class="absolute bottom-0 left-0 right-0 p-4 bg-black/50">
+          <h3 class="text-lg font-semibold">Drone Footage – Aeropark Campaign</h3>
+        </div>
+      </a>
 
-    <!-- PROJECT 7 -->
-    <a href="#" class="project-item relative group overflow-hidden rounded-2xl bg-neutral-800 hover:scale-105 transition-transform"
-       data-video="project_video_7.webm"
-    >
-      <img src="project7.webp" alt="Project 7 thumbnail"
-           class="object-cover w-full h-64 opacity-90 group-hover:opacity-100 transition-opacity" />
-      <div class="absolute bottom-0 left-0 right-0 p-4 bg-black/50">
-        <h3 class="text-lg font-semibold">Documentary Short – The Journey Home</h3>
-      </div>
-    </a>
-  </section>
+      <!-- Project 5 -->
+      <a href="#" class="project-item relative group overflow-hidden rounded-2xl bg-neutral-800 hover:scale-105 transition-transform"
+         data-video="project_video_5.webm">
+        <img src="project5.webp" alt="Project 5" class="object-cover w-full h-64 opacity-90 group-hover:opacity-100 transition-opacity" />
+        <div class="absolute bottom-0 left-0 right-0 p-4 bg-black/50">
+          <h3 class="text-lg font-semibold">Product Promo – VeloSmart</h3>
+        </div>
+      </a>
 
-  <!-- CTA -->
-  <div class="text-center mb-16">
-    <p class="text-lg mb-6 text-gray-300">Feeling inspired? Let’s build something extraordinary.</p>
-    <a href="#" class="book-call px-8 py-4 rounded-full bg-[var(--burgundy)] hover:bg-white hover:text-black transition">
-      Book&nbsp;a&nbsp;Call
-    </a>
-  </div>
+      <!-- Project 6 -->
+      <a href="#" class="project-item relative group overflow-hidden rounded-2xl bg-neutral-800 hover:scale-105 transition-transform"
+         data-video="project_video_6.webm">
+        <img src="project6.webp" alt="Project 6" class="object-cover w-full h-64 opacity-90 group-hover:opacity-100 transition-opacity" />
+        <div class="absolute bottom-0 left-0 right-0 p-4 bg-black/50">
+          <h3 class="text-lg font-semibold">Content Campaign – Green Future</h3>
+        </div>
+      </a>
+
+      <!-- Project 7 -->
+      <a href="#" class="project-item relative group overflow-hidden rounded-2xl bg-neutral-800 hover:scale-105 transition-transform"
+         data-video="project_video_7.webm">
+        <img src="project7.webp" alt="Project 7" class="object-cover w-full h-64 opacity-90 group-hover:opacity-100 transition-opacity" />
+        <div class="absolute bottom-0 left-0 right-0 p-4 bg-black/50">
+          <h3 class="text-lg font-semibold">Documentary Short – The Journey Home</h3>
+        </div>
+      </a>
+
+    </section>
+
+    <!-- CTA -->
+    <div class="text-center mt-16">
+      <p class="text-lg mb-6 text-gray-300">Feeling inspired? Let’s build something extraordinary.</p>
+      <a href="#" class="book-call px-8 py-4 rounded-full bg-[var(--burgundy)] hover:bg-white hover:text-black transition">
+        Book&nbsp;a&nbsp;Call
+      </a>
+    </div>
+
+  </div> <!-- end #portfolio-bg -->
 
   <!-- VIDEO MODAL -->
-  <div id="video-modal"
-       class="fixed inset-0 bg-black/80 flex items-center justify-center hidden z-50">
+  <div id="video-modal" class="fixed inset-0 bg-black/80 flex items-center justify-center hidden z-50">
     <div class="relative w-full max-w-3xl">
-      <button id="modal-close"
-              class="absolute top-2 right-2 text-white text-3xl leading-none">&times;</button>
+      <button id="modal-close" class="absolute top-2 right-2 text-white text-3xl leading-none">&times;</button>
       <video id="modal-video" class="w-full h-auto" controls>
-        <source src="" type="video/webm">
+        <source src="" type="video/webm" />
         Your browser does not support HTML5 video.
       </video>
     </div>
   </div>
 
-  <!-- Calendly Popup -->
+  <!-- SCRIPTS -->
   <script src="https://assets.calendly.com/assets/external/widget.js"></script>
   <script>
     // Calendly on .book-call
-    document.querySelectorAll('.book-call').forEach(btn=>{
-      btn.addEventListener('click', e=>{
+    document.querySelectorAll('.book-call').forEach(btn => {
+      btn.addEventListener('click', e => {
         e.preventDefault();
         Calendly.initPopupWidget({
           url: 'https://calendly.com/jakabbenedek2002/discovery-call'
@@ -158,8 +163,8 @@
     });
 
     // Video modal logic
-    document.querySelectorAll('.project-item').forEach(item=>{
-      item.addEventListener('click', e=>{
+    document.querySelectorAll('.project-item').forEach(item => {
+      item.addEventListener('click', e => {
         e.preventDefault();
         const src = item.dataset.video;
         const videoEl = document.getElementById('modal-video');
@@ -168,12 +173,13 @@
         document.getElementById('video-modal').classList.remove('hidden');
       });
     });
-    document.getElementById('modal-close').addEventListener('click', ()=>{
+    document.getElementById('modal-close').addEventListener('click', () => {
       const modal = document.getElementById('video-modal');
       const video = document.getElementById('modal-video');
       video.pause();
       modal.classList.add('hidden');
     });
   </script>
+
 </body>
 </html>
