--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body class="font-sans text-white bg-black">
 
-  <!-- ▸ NAVIGATION -------------------------------------------------------------------- -->
+  <!-- NAVIGATION -->
   <header class="fixed inset-x-0 top-0 z-50 flex items-center justify-between px-6 py-4 bg-black/80 backdrop-blur-lg">
     <a href="#" class="flex items-center gap-2 group" aria-label="Homepage">
       <img src="logo.webp" alt="CrimsonLens logo" class="w-10 h-10 select-none" />
@@ -22,12 +22,11 @@
         <span class="text-white">Crimson</span><span class="text-[var(--burgundy)]">Lens</span>
       </span>
     </a>
-
     <nav class="hidden items-center gap-6 text-sm md:flex">
       <a href="#services"      class="transition-colors hover:text-[var(--burgundy)]">Services</a>
       <a href="#testimonials"  class="transition-colors hover:text-[var(--burgundy)]">Testimonials</a>
-      <!-- Calendly trigger in nav -->
-      <a href="#" class="book-call ml-8 px-6 py-3 transition rounded-full bg-[var(--burgundy)] hover:bg-white hover:text-black">
+      <a href="portfolio.html" class="transition-colors hover:text-[var(--burgundy)]">View Portfolio</a>
+      <a href="#contact"       class="book-call ml-8 px-6 py-3 transition rounded-full bg-[var(--burgundy)] hover:bg-white hover:text-black">
         Book&nbsp;a&nbsp;Call
       </a>
     </nav>
@@ -184,8 +183,12 @@
     </div>
   </section>
 
-  <!-- ▸ FOOTER ------------------------------------------------------------------------ -->
+  <!-- FOOTER with Social Links -->
   <footer class="py-6 text-sm text-center bg-neutral-900 text-gray-500">
+    <div class="flex justify-center gap-4 mb-2">
+      <a href="https://linkedin.com/in/jakabbenedek2002" target="_blank" class="hover:text-white">LinkedIn</a>
+      <a href="https://www.instagram.com/benedekjakab/" target="_blank" class="hover:text-white">Instagram</a>
+    </div>
     © 2025 CrimsonLens. All rights reserved.
   </footer>
 
