--- a/portfolio.html
+++ b/portfolio.html
@@ -52,7 +52,7 @@
       </a>
     </nav>
   </header>
-
+  
   <!-- PORTFOLIO CONTENT WITH RESPONSIVE BACKGROUND -->
   <div id="portfolio-bg" class="min-h-screen pt-32 pb-16">
 
@@ -142,6 +142,15 @@
 
   </div> <!-- end #portfolio-bg -->
 
+  <!-- FOOTER with Social Links -->
+    <footer class="py-6 text-sm text-center bg-neutral-900 text-gray-500">
+      <div class="flex justify-center gap-4 mb-2">
+        <a href="https://linkedin.com/in/jakabbenedek2002" target="_blank" class="hover:text-white">LinkedIn</a>
+        <a href="https://instagram.com/your_instagram" target="_blank" class="hover:text-white">Instagram</a>
+      </div>
+      © 2025 CrimsonLens. All rights reserved.
+    </footer>
+  
   <!-- VIDEO MODAL -->
   <div id="video-modal" class="fixed inset-0 bg-black/80 flex items-center justify-center hidden z-50">
     <div class="relative w-full max-w-3xl">
