--- a/portfolio.html
+++ b/portfolio.html
@@ -9,6 +9,9 @@
   <script src="https://cdn.tailwindcss.com"></script>
 
   <style>
+    /* ↑ Scale all rem‑based text sizes up 25% */
+    html { font-size: 125%; }
+
     :root { --burgundy: #e0003c; }
 
     /* Mobile (portrait) fallback */
