--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
   >
     <div class="absolute inset-0 bg-black/70" aria-hidden="true"></div>
     <div class="relative z-10 max-w-3xl px-6">
-      <h1 class="mb-3 text-7xl font-bold leading-tight md:text-9xl">
+      <!-- Reverted back to text-4xl md:text-6xl -->
+      <h1 class="mb-3 text-4xl font-bold leading-tight md:text-6xl">
         Visual Storytelling Meets<br>
         <span class="text-[var(--burgundy)]">AI‑Powered Marketing</span>
       </h1>
@@ -136,7 +137,7 @@
       </p>
       <a href="#"
          class="book-call px-8 py-4 transition rounded-full shadow-lg bg-[var(--burgundy)] hover:bg-white hover:text-black">
-        Book&nbsp;a&nbsp;Call
+        Book a Call
       </a>
     </div>
   </section>
@@ -177,7 +178,7 @@
   </script>
 
   <!-- CALENDLY POPUP SCRIPT -->
-  <script src="https://assets.calendly.com/assets/external/widget.js" async></script>
+  <script src="https://assets.calendly.com/assets/external/widget.js"></script>
   <script>
     document.querySelectorAll('.book-call').forEach(btn => {
       btn.addEventListener('click', e => {
@@ -191,4 +192,3 @@
 
 </body>
 </html>
-```
